Revisione correzioni norme

--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiOrganizzativi/src/ProcessoDiAmministrazione.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiOrganizzativi/src/ProcessoDiAmministrazione.tex
@@ -22,13 +22,11 @@ La fase di pianificazione deve essere accompagnata dalla fornitura di piani per 
 
 Riportiamo in seguito le attività che il progetto richiede e i corrispondenti strumenti software da noi scelti per il loro svolgimento:
 
-\textbf{Assegnazione delle mansioni, pianificazione delle scadenze e stima dei costi}
-
+\myparagraph{Assegnazione delle mansioni, pianificazione delle scadenze e stima dei costi}\leavevmode \\
 Per l'assegnazione dei task (con annessa data di scadenza) e per la stima dei costi verrà utilizzato  Atlassian Jira,un software per il monitoraggio di ticket e progetti, il quale permette di assegnare specifici task con la relativa scadenza e preventivo orario a ciascun membro del gruppo tramite l'utilizzo di \glo{epic}. Inoltre è possibile commentare le varie \glo{epic} e visualizzare le scadenze e lo stato di avanzamento del task sulla project board. Jira inoltre consente l'integrazione con GitLab.
 
-\textbf{Testing e controllo della qualità}
-
-Per la fase di testing, continuous integration e per il controllo della qualità del codice prodotto verranno utilizzati \glo{SonarQube} (tramite sonarcloud https://sonarcloud.io/explore/projects), coveralls (https://coveralls.io/) e GitLab Actions . Tali strumenti consentono di lavorare seguendo la pratica di CI, associando al codice prodotto la copertura effettiva dei test associati e altre  statistiche utili per lo sviluppo del codice.
+\myparagraph{Testing e controllo della qualità}\leavevmode \\
+Per la fase di testing, continuous integration e per il controllo della qualità del codice prodotto verranno utilizzati \glo{SonarQube} (\url{https://www.sonarqube.org/}), coveralls (\url{https://coveralls.io/}) e GitLab CI . Tali strumenti consentono di lavorare seguendo la pratica di CI, associando al codice prodotto la copertura effettiva dei test associati e altre  statistiche utili per lo sviluppo del codice.
 
 \subsubsection{Esecuzione e controllo}
 Tale fase è regolata dalle seguenti attività:
