--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiOrganizzativi/src/ProcessoDiApprendimento.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiOrganizzativi/src/ProcessoDiApprendimento.tex
@@ -29,7 +29,7 @@ Si consiglia lo sviluppo di un manuale per l'apprendimento.
         \hypersetup{
             linkcolor=blue
         }
-        -\hyperlink{ProcessiPrimari}{Processi di Primari};\\
+        -\hyperlink{ProcessiPrimari}{Processi Primari};\\
         -\hyperlink{ProcessiSupporto}{Processi di Supporto}.
     \end{itemize}
 \end{itemize}
