--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiOrganizzativi/src/ProcessoDiInfrastruttura.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiOrganizzativi/src/ProcessoDiInfrastruttura.tex
@@ -20,7 +20,7 @@ In particolare l'infrastruttura indicata per il progetto corrente non riguarda p
 
 Di seguito  vengono illustrati gli strumenti software per lo svolgimento di riunioni telematiche e le comunicazioni rapide. Nello specifico, le comunicazioni vengono divise in due macrocategorie, ovvero le comunicazioni interne al gruppo e le comunicazioni con enti e persone esterne ad esso.
 
-\textbf{Comunicazioni interne al gruppo}
+\myparagraph{Comunicazioni interne al gruppo}\leavevmode \\
 
  Per la realizzazione di videoconferenze telematiche, verrà utilizzato l'apposito server privato "SWEG11" sulla piattaforma di VoIP Discord.
 Per le comunicazioni testuali sono inoltre stati predisposti tre canali testuali interni a tale server:
@@ -33,7 +33,7 @@ Per le comunicazioni testuali sono inoltre stati predisposti tre canali testuali
 
 Per le comunicazioni rapide ed eventuali discussioni o proposte esterne alle riunioni viene utilizzato l'apposito gruppo privato sulla piattaforma di messaggistica istantanea Telegram.
 
-\textbf{Comunicazioni esterne al gruppo}
+\myparagraph{Comunicazioni esterne al gruppo}\leavevmode \\
 
 I canali di comunicazione con il proponente sono:
 \begin{itemize}
