--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/AnalisiDeiRequisiti/src/ClassificazioneCasiDUso.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/AnalisiDeiRequisiti/src/ClassificazioneCasiDUso.tex
@@ -1,7 +1,7 @@
 Tutti i casi d'uso individuati dagli analisti devono essere univocamente identificati secondo il seguente schema identificativo:
 
 \begin{center}
-    \textbf{UC[CodiceCaso]}
+    \textbf{UC-[CodiceCaso]}
 \end{center}
 
 Dove:
