--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/AnalisiDeiRequisiti/src/ClassificazioneRequisiti.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/AnalisiDeiRequisiti/src/ClassificazioneRequisiti.tex
@@ -1,7 +1,7 @@
 Tutti i requisiti individuati dagli analisti devono essere univocamente identificati secondo il seguente schema identificativo:
 
 \begin{center}
-    \textbf{R[Identificativo]-[Tipologia]-[Priorit\`{a}]}
+    \textbf{R-[Identificativo]-[Tipologia]-[Priorit\`{a}]}
 \end{center}
 
 Dove:
@@ -17,7 +17,7 @@ Dove:
     \item \textbf{Tipologia}: assume, a seconda del tipo di requisito, i valori:
     \begin{itemize}
         \item \textbf{F}: funzionale;
-        \item \textbf{P}: prestazionale;
+        \item \textbf{V}: vincolo;
         \item \textbf{Q}: qualitativo;
     \end{itemize}
     \item \textbf{Identificativo}: numero progressivo per contraddistinguere il requisito, in forma gerarchica padre-figlio secondo la seguente struttura:
