--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/Progettazione/src/TechnologyBaseline.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/Progettazione/src/TechnologyBaseline.tex
@@ -2,9 +2,9 @@ La technology baseline descrive ed eventualmente motiva le decisioni prese dal g
 
 \begin{itemize}
     \item \textbf{Tecnologie utilizzate}: descrizione dettagliata delle tecnologie utilizzate, indicando linguaggi,  \glo{framework} e \glo{librerie} utilizzati;
-    \item \textbf{diagrammi dei casi d'uso }: per individuare i requisiti funzionali che descrivono le interazioni tra l'utente e il sistema.
+    \item \textbf{Diagrammi dei casi d'uso }: per individuare i requisiti funzionali che descrivono le interazioni tra l'utente e il sistema;
     \item \textbf{Tracciamento delle componenti}: associazione tra requisiti e componenti che li soddisfano;
     \item \textbf{Test di integrazione}: descrizione dei test eseguiti per verificare che i componenti interagiscano in maniera corretta tra di loro per soddisfare i requisiti.
 \end{itemize}
 
-La technology baseline deve concretizzarsi nella realizzazione di un \emph{\glo{PoC}} che ha la funzione di mostrare l'integrazione dei requisiti principali integrati tramite le tecnologie riportate nella tabella dello stack tecnologico, per i requisiti relativi si rimanda al PdP.
+La technology baseline deve concretizzarsi nella realizzazione di un \emph{\glo{PoC}} che ha la funzione di mostrare la capacità di autoapprendimento e di applicazione delle tecnologie il cui utilizzo è stato concordato da tutti i membri del gruppo. 
