--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/Progettazione/src/scopo.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/Progettazione/src/scopo.tex
@@ -1,1 +1,1 @@
-L'attivit\`{a} di progettazione ha lo scopo di definire l'architettura logica del prodotto da sviluppare, viene inizializzata al termine dell'attivit\`{a} di analisi dei requisiti e conclusa prima dell'attivit\`{a} di codifica. 
+L'attivit\`{a} di progettazione ha lo scopo di definire l'architettura logica del prodotto da sviluppare. Essa viene inizializzata al termine delle attivit\`{a} associate all'analisi dei requisiti e conclusa prima dell'attivit\`{a} di codifica. 
