--- a/DocumentiInterni/NormeDiProgetto/src/Introduzione/main.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/Introduzione/main.tex
@@ -1,6 +1,5 @@
 \subsection{Scopo del documento}
-Questo documento ha lo scopo di essere utilizzato come linea guida per svolgere le attività nell'intero ciclo di vita del progetto.
-Al suo interno vengono quindi dichiarate le norme, le tecnologie e gli strumenti che il gruppo \Gruppo{} intende utilizzare.
+Questo documento ha lo scopo di essere utilizzato come linea guida per svolgere le attività nell'intero ciclo di vita del progetto. Al suo interno vengono quindi dichiarate le norme, le tecnologie e gli strumenti che il gruppo \Gruppo{} intende utilizzare.
 Ogni membro del gruppo è obbligato a tenere in considerazione questo documento al fine di garantire la massima coerenza del materiale prodotto.
 	
 \subsection{Scopo del prodotto}
@@ -8,10 +7,10 @@ Lo scopo del prodotto è quello di realizzare un’applicazione in grado di segn
 dedicato la presenza di un utente su una determinata postazione e controllare in ogni momento
 se questa è libera, disabilitata, occupata, prenotata oppure da pulire. L’applicazione dovrà essere
 installata in uno smartphone \glo{Android} e dovrà poter essere utilizzata impiegando
-dei tag \glo{RFID}.L'amministratore di sistema avrà accesso ad una \glo{UI} per gestire le tali postazioni in modo semplice.
+dei tag \glo{RFID}. L'amministratore di sistema avrà accesso ad una \glo{UI} per gestire tali postazioni in modo semplice.
 
 \subsection{Glossario}
-Al fine di evitare ambiguità fra i termini, e per avere chiare fra tutti gli stakeholder le terminologie utilizzate per la realizzazione del presente documento, il gruppo \Gruppo{} ha redatto un documento denominato \Gv{}.
+Al fine di evitare ambiguità fra i termini e per avere chiare fra tutti gli stakeholder le terminologie utilizzate per la realizzazione del presente documento, il gruppo \Gruppo{} ha redatto un documento denominato \Gv{}.
 In tale documento, sono presenti tutti i termini tecnici, ambigui, specifici del progetto e scelti dai membri del gruppo con le loro relative definizioni.
 Un termine presente nel \Gv{} e utilizzato in questo documento viene indicato con un pedice \glo{} alla fine della parola.
 
@@ -27,11 +26,11 @@ Un termine presente nel \Gv{} e utilizzato in questo documento viene indicato co
 	\item \PdPv{}
 	\item \PdQv{}
 	\item \textbf{ISO\_1227--1995:} \url{https://www.math.unipd.it/~tullio/IS-1/2009/Approfondimenti/ISO_12207-1995.pdf}
-	\item \href{https://www.math.unipd.it/~tullio/IS-1/2020/Dispense/L05.pdf}{Slide L05 del corso Ingegneria del Software - Ciclo di vita del software}
-	\item \href{https://www.math.unipd.it/~rcardin/swea/2021/Diagrammi%20Use%20Case_4x4.pdf}{Slide dei casi d'uso}
-	\item \href{https://www.math.unipd.it/~rcardin/swea/2021/Diagrammi%20delle%20Classi_4x4.pdf}{Slide dei diagrammi delle classi}
-	\item \href{https://www.math.unipd.it/~rcardin/swea/2021/Diagrammi%20di%20Sequenza_4x4.pdf}{Slide dei diagrammi di sequenza}
-	\item \href{https://www.math.unipd.it/~rcardin/swea/2021/Diagrammi%20di%20Attivit%c3%a0_4x4.pdf}{Slide dei diagrammi delle attività}
-	\item \href{https://www.math.unipd.it/~rcardin/swea/2021/Diagrammi%20dei%20Package_4x4.pdf}{Slide dei diagrammi dei package}
-	%devono essere specifici non intero sito o argomento
+	\item \textbf{Slide L05 del corso Ingegneria del Software - Ciclo di vita del software:} \url{https://www.math.unipd.it/~tullio/IS-1/2020/Dispense/L05.pdf}
+	\item \textbf{Slide dei casi d'uso:} \url{https://www.math.unipd.it/~rcardin/swea/2021/Diagrammi%20Use%20Case_4x4.pdf}
+	\item \textbf{Slide dei diagrammi delle classi:} \url{https://www.math.unipd.it/~rcardin/swea/2021/Diagrammi%20delle%20Classi_4x4.pdf}
+	\item \textbf{Slide dei diagrammi di sequenza:} \url{https://www.math.unipd.it/~rcardin/swea/2021/Diagrammi%20di%20Sequenza_4x4.pdf}
+	\item \textbf{Slide dei diagrammi delle attività:} \url{https://www.math.unipd.it/~rcardin/swea/2021/Diagrammi%20di%20Attivit%c3%a0_4x4.pdf}
+	\item \textbf{Slide dei diagrammi dei package:} \url{https://www.math.unipd.it/~rcardin/swea/2021/Diagrammi%20dei%20Package_4x4.pdf}
+	
 \end{itemize}
